# barcode

./: CMakeLists.txt  Group.qml  GroupDelegate.qml  Info.cc  Info.h  Page1.qml  Page2.qml  Tt.qml  main.cpp  main.qml  qml.qrc  qtquickcontrols2.conf  shop.csv
Groups/: Article.cc  Articles-load_from_file.cc  Articles.cc  Articles.h  ArticlesLFF.cc  Groups.cc  Groups.h  Groups_init.cc  Item.cc  Item.h  Items.cc  Items.h
